# yuyu

./: Cargo.toml  README.md  rust-toolchain
cli/: Cargo.toml  main.rs
core/: Cargo.toml  lib.rs  yt.rs
core/comic/: mod.rs
core/comic/ehentai/: mod.rs
core/comic/nhentai/: mod.rs  reader.rs
core/comic/pixiv/: mod.rs
core/images/: mod.rs
core/images/instagram/: mod.rs
server/: Cargo.toml
