[package]
name = "yuyu"
version = "0.1.0"
authors = ["Federico Morrone <contact@morrone.dev>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
clap = "2.33.3"
indicatif = "0.15.0"
tokio = { version = "1.5.0", features = ["full"] }
yuyu_core = { path = "../core", version = "0.1.0" }

[[bin]]
name = "yuyu"
path = "main.rs"
doc = false