cargo-features = ["strip"]

[package]
name = "yuyu_core"
version = "0.1.0"
authors = ["Federico Morrone <contact@morrone.dev>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
nipper = "0.1.9"
regex = "1.4.5"
reqwest = { version = "0.11.3", features = ["json", "cookies", "native-tls-vendored"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_ignored = "0.1.2"
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["full"] }
url = { version  = "2.2.1", features = ["serde"] }

[lib]
path = "lib.rs"